<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:background="@color/list_view_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/list_view_row_background">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/task_number"
                android:textSize="14sp"
                android:textColor="@color/list_view_primary_content"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/task_id"
                    android:text="000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/list_view_primary_content"/>
                <TextView
                    android:id="@+id/task_state"
                    android:text="@string/unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/list_view_primary_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            </LinearLayout>
        <TextView
            android:id="@+id/task_name"
            android:text="@string/empty_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:textColor="@color/list_view_primary_content" />
    </LinearLayout>

</LinearLayout>