<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12sp"
    android:paddingRight="12sp"
    android:paddingBottom="8sp"
    android:paddingTop="8sp"
    android:background="#eeeeee"
    android:descendantFocusability="blocksDescendants"
    android:layout_margin="5sp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_number"
            android:textSize="16sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/task_id"
                android:text="000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/task_state"
                android:text="Unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/task_name"
        android:text="Empty task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>
    <View android:id="@+id/separator"
        android:background="#000000"
        android:layout_width = "fill_parent"
        android:layout_height="1dip"
        android:layout_centerVertical ="true"
        android:layout_alignParentTop="true"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/set_active_button"
                android:text="@string/set_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/show_on_map_button"
                android:text="@string/show_on_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/complete_button"
            android:text="@string/complete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>