<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.TaskDetailsActivity"
    tools:showIn="@layout/task_info_activity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp">
                <TextView
                    android:text="@string/task_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/task_id"
                    android:text="000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <Button
                        android:text="@string/complete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
            <!--Sender info-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15sp">
                <TextView
                    android:text="@string/sender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
                <View
                    android:background="#999999"
                    android:layout_width = "fill_parent"
                    android:layout_height="2dip" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10sp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp">
                        <TextView
                            android:text="@string/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/sender_name"
                            android:text="@string/unknown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15sp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp">
                        <TextView
                            android:text="@string/address"
                            android:layout_width="80sp"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/sender_address"
                            android:text="@string/unknown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15sp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp">
                        <TextView
                            android:text="@string/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/sender_phone"
                            android:text="@string/unknown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15sp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <!--Receiver info-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15sp">
                <TextView
                    android:text="@string/receiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
                <View
                    android:background="#999999"
                    android:layout_width = "match_parent"
                    android:layout_height="2dip" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10sp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp">
                        <TextView
                            android:text="@string/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/receiver_name"
                            android:text="@string/unknown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15sp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp">
                        <TextView
                            android:text="@string/address"
                            android:layout_width="80sp"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/receiver_address"
                            android:text="@string/unknown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15sp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp">
                        <TextView
                            android:text="@string/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/receiver_phone"
                            android:text="@string/unknown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15sp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <!--Content-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:text="@string/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:textStyle="bold"/>
                    <View
                        android:background="#999999"
                        android:layout_width = "match_parent"
                        android:layout_height="2dip" />
                    <TextView
                        android:id="@+id/task_content"
                        android:text="@string/unknown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp">
                    <TextView
                        android:text="Info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:textStyle="bold"/>
                    <View
                        android:background="#999999"
                        android:layout_width = "match_parent"
                        android:layout_height="2dip" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="Date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/task_date"
                                android:text="@string/unknown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textStyle="bold"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="Warehouse"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/task_warehouse"
                                android:text="@string/unknown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textStyle="bold"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="State"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/task_state"
                                android:text="@string/unknown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textStyle="bold"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <!--Comments-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15sp">
                <TextView
                    android:text="@string/comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
                <View
                    android:background="#999999"
                    android:layout_width = "match_parent"
                    android:layout_height="2dip" />
                <TextView
                    android:id="@+id/task_comment"
                    android:text="@string/unknown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
